<resources>
    <string name="app_name">外汇快讯</string>
    <string name="news">新闻</string>
    <string name="userID">User ID</string>
    <string name="password">Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="nickName">Nick Name</string>
    <string name="PREF_USER_TOKEN">UserToken</string>
    <string name="JSON_TOKEN">token</string>
    <string name="INTENT_RECOMMEND">INTENT_RECOMMENDATION</string>
    <string name="INTENT_COMMENT">INTENT_COMMENT</string>
    <string name="INTENT_RateChartURL">INTENT_RateChartURL</string>
    <string name="title_activity_login">Sign in</string>
    <string name="ABOUT_US">外汇可以每周5天每天24小时参与全球市场。交易低成本，最低投资额较低，杠杆率最高可达400:1。外汇是全球最大的金融市场。外汇市场自1999年起对散户交易者开放，可以为交易者提供其它市场类别无法提供的机会。</string>

    <!-- Strings related to login -->
    <string name="prompt_email">电邮</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登  录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="symbols_array">
        <item></item>
        <item>EURUSD</item>
        <item>GBPUSD</item>
        <item>USDJPY</item>
        <item>USDCAD</item>
        <item>AUDUSD</item>
        <item>NZDUSD</item>
        <item>USDCHF</item>
        <item>USDNOK</item>
    </string-array>
    <string-array name="questions_array">
        <item>App使用</item>
        <item>交易开户</item>
        <item>推荐交易</item>
        <item>用户评论</item>
        <item>改进建议</item>
        <item>寻求合作</item>
        <item>其他问题</item>
    </string-array>
</resources>